# fiap-tech-challenge

./: .gitignore  Dockerfile  README.md  configmap-db.yaml  configmap-sistema.yaml  deployment-postgres-db.yaml  docker-compose.yaml  pod-tasty-sistema.yaml  pyproject.toml  replicaset-tasty-sistema.yaml  svc-postgres-db.yaml
k8s/: configmap-db.yaml  configmap-tasty-sistema.yaml  deployment-tasty-sistema.yaml  hpa-tasty-sistema.yaml  pod-sistema-tasty.yaml  pvc-postgres.yaml  statefullset-postgress-db.yaml  statefulset-postgress-db.yaml  svc-postgres-db.yaml  svc-tasty-sistema.yaml
k8s/k8s-fora-projeto/: deployment-postgres-db.yaml  pod-db-postgres.yaml
tasty_delivery/: logger.py  main.py  security.py  server.py  settings.py
tasty_delivery/adapter/api/controllers/: auth_client_controller.py  auth_controller.py  auth_user_controller.py  category_controller.py  client_controller.py  order_controller.py  product_controller.py  user_controller.py
tasty_delivery/adapter/database/: db.py
tasty_delivery/adapter/database/models/: category.py  client.py  combo.py  order.py  order_product_association.py  orders_products.py  product.py  user.py
tasty_delivery/adapter/repositories/: category_repository.py  client_repository.py  order_repository.py  product_repository.py  user_repository.py
tasty_delivery/adapter/webhook/: __init__.py  webhook.py
tasty_delivery/core/application/use_cases/: base_use_case.py  ibase_use_case.py  iuser_case.py  (+1 more)
tasty_delivery/scripts/: populate_database.py
tasty_delivery/security/: base.py  client_security.py  user_security.py
(+31 files in other folders)
