[tool.poetry]
name = "tasty-delivery"
version = "0.1.0"
description = ""
authors = ["tais.amanda <taisjjorge@gmail.com>"]
readme = "README.md"
packages = [{include = "tasty_delivery"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
