[tool.poetry]
name = "tasty-delivery"
version = "0.1.0"
description = ""
authors = ["tais.amanda <taisjjorge@gmail.com>"]
readme = "README.md"
packages = [{include = "tasty_delivery"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.21"
pydantic-settings = "^2.0.3"
psycopg2-binary = "^2.9.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
